<resources>
    <string name="app_name">Learning and Vision</string>

    <string name="button_start">Begin Questionnaire</string>
    <string name="button_submit">Submit Questionnaire</string>
    <string name="button_next">Next Question</string>
    <string name="button_restart">Start Questionnaire Over</string>
    <string name="button_continue">Continue</string>

    <string name="message_welcome">Welcome!</string>
    <string name="message_question">Question</string>
    <string name="message_thanks_1">Thank you for completing the questionnaire!</string>
    <string name="message_thanks_2">Please hand the device over to the technician/doctor now.</string>
    <string name="message_restart">Are you sure you wish to start from the beginning?</string>
    <string name="message_confirm">Yes</string>
    <string name="message_cancel">No</string>
    <string name="message_enter_password">Enter Password</string>
    <string name="message_password_matched">Password Matched</string>
    <string name="message_wrong_password">Wrong Password!</string>
    <string name="message_review_title">Review Responses</string>

    <string name="message_test_pass">Pass</string>
    <string name="message_test_fail">Fail</string>

    <string name="choice_1">Never</string>
    <string name="choice_2">Not Often</string>
    <string name="choice_3">Sometimes</string>
    <string name="choice_4">Fairly Often</string>
    <string name="choice_5">Always</string>

    <string name="test_1_question_1">Do your eyes feel tired when reading or doing close work?</string>
    <string name="test_1_question_2">Do your eyes feel uncomfortable when reading?</string>
    <string name="test_1_question_3">Do you have headaches when reading?</string>
    <string name="test_1_question_4">Do you feel sleepy when reading?</string>
    <string name="test_1_question_5">Do you lose concentration when reading?</string>
    <string name="test_1_question_6">Do you have trouble remembering what you have read?</string>
    <string name="test_1_question_7">Do you have double vision when reading?</string>
    <string name="test_1_question_8">Do you see the words move or jump when you read?</string>
    <string name="test_1_question_9">Do you feel like you read slowly?</string>
    <string name="test_1_question_10">Do your eyes ever hurt when reading?</string>
    <string name="test_1_question_11">Do your eyes ever feel sore (i.e. achy) when reading?</string>
    <string name="test_1_question_12">Do you ever feel a "pulling feeling" around your eyes?</string>
    <string name="test_1_question_13">Do you notice words coming in and out of focus?</string>
    <string name="test_1_question_14">Do you lose your place / line when reading?</string>
    <string name="test_1_question_15">Do you have to re-read the same line when reading?</string>
</resources>
