<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_thanks"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.optometry.DisplayThanksActivity">

    <TextView
        android:id="@+id/message_thanks_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/message_thanks_2"
        android:layout_centerHorizontal="true"
        android:text="@string/message_thanks_1" />

    <TextView
        android:id="@+id/message_thanks_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/message_thanks_2" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_thanks_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="continueToResults"
        android:text="@string/button_continue" />

</RelativeLayout>
